# vrs_anvil_toolkit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yaml
1000g/: 1000g_plugin.py  worked_example.py
plugin_system/: base_plugin.py  plugin_manager.py  utils.py
plugin_system/plugins/: base_plugin.py  gregor_plugin.py  stub_plugin.py
scripts/: plugin_usage_example.py
src/plugin_system/: plugin_manager.py
src/plugin_system/plugins/: simple_plugin.py
src/vrs_anvil/: cli.py  evidence.py
tests/fixtures/: 1kGP.chr1.1000.vrs.vcf.gz.tbi  chr1_multi_sample_index.db  chr1_multi_sample_vrs.vcf.gz.tbi  gnomAD_v4.0.0_ENSG00000012048_2024_03_04_18_33_26.csv
tests/fixtures/gregor/: README.md
tests/integration/: test_terra.py
tests/integration/gregor/: README.md  conftest.py  test_caf_generation.py  test_phenotype_index.py
tests/unit/: test_annotator.py  test_plugin.py  test_vcf_to_gnomad.py
vrs_anvil/: evidence.py
